@@ -1,0 +1,2 @@
+gzip on;
+gzip_disable "msie6";
