@@ -1,0 +1,3 @@
+upstream php_workers {
+    server PH_PHP_FASTCGI_SOCKET_FULL;
+}
