@@ -1,0 +1,1 @@
+types_hash_max_size 2048;
